--- a/EnergyManagementApp/app/src/main/res/layout/activity_battery_managment.xml
+++ b/EnergyManagementApp/app/src/main/res/layout/activity_battery_managment.xml
@@ -19,20 +19,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/chart"
-                android:layout_width="match_parent"
-                android:layout_height="200dp" />
+            <Button
+                android:id="@+id/selectDateButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select timeframe" />
 
             <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/calendarView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:mcv_showOtherDates="all"
+                android:visibility="gone"
                 app:mcv_selectionColor="#00F"
                 app:mcv_selectionMode="range"
-                />
+                app:mcv_showOtherDates="all" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" >
+
+            </com.github.mikephil.charting.charts.LineChart>
 
         </LinearLayout>
     </ScrollView>
