--- a/EnergyManagementApp/app/src/main/res/layout/activity_ecar_charging.xml
+++ b/EnergyManagementApp/app/src/main/res/layout/activity_ecar_charging.xml
@@ -32,8 +32,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="172dp"
+        style = "@android:style/Widget.ProgressBar.Horizontal"        android:layout_width="172dp"
         android:layout_height="41dp"
         android:max="100"
         android:progress="30"
