--- a/EnergyManagementApp/app/src/main/res/layout/activity_slope_adjustment.xml
+++ b/EnergyManagementApp/app/src/main/res/layout/activity_slope_adjustment.xml
@@ -6,4 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".SlopeAdjustmentActivity">
 
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.452"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.463" />
+
+    <com.google.android.material.slider.Slider
+
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginTop="134dp"
+        android:valueFrom="0.0"
+        android:valueTo="100.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="409dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerPanelView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:itemCount="5"
+                tools:listitem="@layout/panel_card_view_design"/>
+
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
