--- a/EnergyManagementApp/app/src/main/res/layout/activity_panel_management.xml
+++ b/EnergyManagementApp/app/src/main/res/layout/activity_panel_management.xml
@@ -7,7 +7,7 @@
     tools:context=".manageEfficiency.PanelManagementActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titleEfficiency"
         android:layout_width="369dp"
         android:layout_height="75dp"
         android:layout_marginStart="21dp"
@@ -18,13 +18,13 @@
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/textYellowWarning"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageRed"
         android:layout_width="47dp"
         android:layout_height="44dp"
         android:layout_marginStart="12dp"
@@ -43,15 +43,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/red_text"
         app:layout_constraintHorizontal_bias="0.026"
-        app:layout_constraintStart_toEndOf="@+id/imageView3" />
+        app:layout_constraintStart_toEndOf="@+id/imageRed" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageOrange"
         android:layout_width="47dp"
         android:layout_height="44dp"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/textRedWarning"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/orange" />
 
@@ -62,11 +62,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="48dp"
         android:text="0%"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textOrangeWarning"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textYellowWarning"
         android:layout_width="376dp"
         android:layout_height="52dp"
         android:layout_marginStart="17dp"
@@ -98,13 +98,13 @@
         android:layout_marginStart="22dp"
         android:layout_marginEnd="13dp"
         android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/textRedWarning"
         app:layout_constraintEnd_toStartOf="@+id/orange_text"
         app:layout_constraintHorizontal_bias="0.028"
-        app:layout_constraintStart_toEndOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/imageOrange" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textRedWarning"
         android:layout_width="376dp"
         android:layout_height="52dp"
         android:layout_marginStart="17dp"
@@ -114,18 +114,18 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintBottom_toTopOf="@+id/imageRed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageYellow"
         android:layout_width="47dp"
         android:layout_height="44dp"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="44dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textOrangeWarning"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/yellow" />
 
@@ -136,7 +136,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="48dp"
         android:text="0%"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/textRedWarning"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <SeekBar
@@ -146,13 +146,13 @@
         android:layout_marginStart="22dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="44dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textOrangeWarning"
         app:layout_constraintEnd_toStartOf="@+id/yellow_text"
         app:layout_constraintHorizontal_bias="0.021"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/imageYellow" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textOrangeWarning"
         android:layout_width="376dp"
         android:layout_height="52dp"
         android:layout_marginStart="17dp"
@@ -162,7 +162,7 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/imageOrange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
