--- a/EnergyManagementApp/app/src/main/res/layout/item_onoff.xml
+++ b/EnergyManagementApp/app/src/main/res/layout/item_onoff.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
-        android:id="@+id/switch1"
+        android:id="@+id/switchOnOff"
         android:layout_width="58dp"
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
