--- a/EnergyManagementApp/app/src/main/res/layout/activity_battery_managment.xml
+++ b/EnergyManagementApp/app/src/main/res/layout/activity_battery_managment.xml
@@ -69,25 +69,25 @@
                             android:id="@+id/textView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text="Boiler 40%" />
 
                         <TextView
                             android:id="@+id/textView2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text="Heater 25%" />
 
                         <TextView
                             android:id="@+id/textView3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text="Oven 25%" />
 
                         <TextView
                             android:id="@+id/textView4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="TextView" />
+                            android:text="E-car 10%" />
                     </LinearLayout>
                 </ScrollView>
             </androidx.cardview.widget.CardView>
